--- a/TESTING2.html
+++ b/TESTING2.html
@@ -15,7 +15,7 @@
       /* wrap for the background */
       #wrap {
           padding-top: 90px;
-          background-color: aquamarine;
+          background-color: green;
           animation: move_bg 6s infinite linear;
       }
       @keyframes walk {
