--- a/TESTING2.html
+++ b/TESTING2.html
@@ -15,12 +15,12 @@
       /* wrap for the background */
       #wrap {
           padding-top: 90px;
-          background-color: green;
+          background-color: yellow;
           animation: move_bg 6s infinite linear;
       }
       @keyframes walk {
           to {
-              background-position: -960px;
+              background-position: -970px;
 
           }
       }
